<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_height="fill_parent" android:layout_width="fill_parent">
	<LinearLayout android:orientation="vertical"
				  android:layout_height="wrap_content" android:layout_width="fill_parent"
				  android:padding="2dip">
		<LinearLayout android:layout_height="wrap_content"
					  android:orientation="horizontal" android:layout_width="fill_parent">
			<FrameLayout android:layout_height="104px"
						 android:layout_width="104px">
				<ImageView android:id="@+id/upicView" android:focusable="true"
						   android:focusableInTouchMode="true" android:scaleType="center"
						   android:layout_height="wrap_content" android:layout_width="wrap_content"
						   android:padding="2px" android:background="#FFFFFFFF"
						   android:layout_gravity="center"></ImageView>
			</FrameLayout>
			<TableLayout android:layout_width="fill_parent"
						 android:layout_height="wrap_content" android:layout_marginLeft="4dip">
				<TableRow>
					<TextView android:text="@string/post_to" android:textSize="11sp"
							  android:layout_height="fill_parent" android:layout_width="wrap_content"
							  android:gravity="center_vertical"></TextView>
					<Spinner android:layout_height="wrap_content" android:id="@+id/journalSpinner"
							 android:layout_width="fill_parent" android:layout_marginTop="2dip"
							 android:layout_weight="1"></Spinner>
				</TableRow>
				<TableRow>
					<TextView android:text="@string/privacy" android:textSize="11sp"
							  android:layout_height="fill_parent" android:layout_width="wrap_content"
							  android:gravity="center_vertical"></TextView>
					<Spinner android:layout_height="wrap_content"
							 android:layout_width="fill_parent" android:id="@+id/privacySpinner"
							 android:layout_marginTop="2dip" android:layout_weight="1"></Spinner>
				</TableRow>
			</TableLayout>
		</LinearLayout>
		<TextView android:layout_height="wrap_content"
				  android:layout_marginTop="4dip" android:textSize="11sp"
				  android:layout_width="wrap_content" android:text="@string/tags"></TextView>

		<MultiAutoCompleteTextView
				android:layout_height="wrap_content" android:id="@+id/tagsEdit"
				android:layout_width="fill_parent" android:layout_weight="1"
				android:layout_marginTop="2dip" android:inputType="text|textAutoComplete"></MultiAutoCompleteTextView>
		<TextView android:layout_height="wrap_content"
				  android:layout_marginTop="4dip" android:textSize="11sp"
				  android:layout_width="wrap_content" android:text="@string/location"></TextView>

		<LinearLayout android:layout_height="wrap_content"
					  android:layout_width="fill_parent" android:orientation="horizontal"
					  android:gravity="center_vertical">
			<EditText android:layout_height="wrap_content"
					  android:inputType="text|textAutoCorrect|textAutoComplete"
					  android:layout_width="fill_parent" android:id="@+id/locationEdit"
					  android:layout_marginTop="2dip" android:layout_weight="1"></EditText>
			<Button android:id="@+id/locateButton" android:layout_width="wrap_content"
					android:drawableLeft="@android:drawable/ic_menu_mylocation"
					android:layout_height="fill_parent" android:layout_marginTop="2dip"></Button>
		</LinearLayout>
		<TextView android:layout_height="wrap_content"
				  android:layout_marginTop="4dip" android:textSize="11sp"
				  android:layout_width="wrap_content" android:text="@string/mood"></TextView>
		<EditText android:layout_height="wrap_content" android:id="@+id/moodEdit"
				  android:inputType="text|textAutoCorrect|textAutoComplete"
				  android:layout_width="fill_parent" android:layout_marginTop="2dip"
				  android:layout_weight="1"></EditText>

		<TextView android:layout_height="wrap_content"
				  android:layout_marginTop="4dip" android:textSize="11sp"
				  android:layout_width="wrap_content" android:text="@string/music"></TextView>
		<EditText android:layout_height="wrap_content" android:id="@+id/musicEdit"
				  android:inputType="text|textAutoCorrect|textAutoComplete"
				  android:layout_width="fill_parent" android:layout_marginTop="2dip"
				  android:layout_weight="1"></EditText>

		<CheckBox android:id="@+id/screenCommentsCheckbox"
				  android:layout_height="wrap_content" android:layout_marginTop="4dip"
				  android:layout_width="wrap_content" android:text="@string/screen_comments"></CheckBox>

		<CheckBox android:id="@+id/disableCommentsCheckbox"
				  android:layout_height="wrap_content" android:layout_marginTop="4dip"
				  android:layout_width="wrap_content" android:text="@string/disable_comments"></CheckBox>

	</LinearLayout>
</ScrollView>